; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_ifioctl_getnetagents.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_ifioctl_getnetagents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i64, i32* }

@IFNET_LCK_ASSERT_SHARED = common dso_local global i32 0, align 4
@USER_ADDR_NULL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ifnet*, i64*, i64)* @ifioctl_getnetagents to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ifioctl_getnetagents(%struct.ifnet* %0, i64* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ifnet*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %5, align 8
  store i64* %1, i64** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 0, i32* %8, align 4
  store i64 0, i64* %9, align 8
  store i64 0, i64* %10, align 8
  %12 = load i64*, i64** %6, align 8
  store i64 0, i64* %12, align 8
  %13 = load %struct.ifnet*, %struct.ifnet** %5, align 8
  %14 = load i32, i32* @IFNET_LCK_ASSERT_SHARED, align 4
  %15 = call i32 @ifnet_lock_assert(%struct.ifnet* %13, i32 %14)
  %16 = load %struct.ifnet*, %struct.ifnet** %5, align 8
  %17 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %61

20:                                               ; preds = %3
  store i64 0, i64* %9, align 8
  br label %21

21:                                               ; preds = %57, %20
  %22 = load i64, i64* %9, align 8
  %23 = load %struct.ifnet*, %struct.ifnet** %5, align 8
  %24 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ult i64 %22, %25
  br i1 %26, label %27, label %60

27:                                               ; preds = %21
  %28 = load %struct.ifnet*, %struct.ifnet** %5, align 8
  %29 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = load i64, i64* %9, align 8
  %32 = getelementptr inbounds i32, i32* %30, i64 %31
  store i32* %32, i32** %11, align 8
  %33 = load i32*, i32** %11, align 8
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @uuid_is_null(i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %56, label %37

37:                                               ; preds = %27
  %38 = load i64, i64* %7, align 8
  %39 = load i64, i64* @USER_ADDR_NULL, align 8
  %40 = icmp ne i64 %38, %39
  br i1 %40, label %41, label %53

41:                                               ; preds = %37
  %42 = load i32*, i32** %11, align 8
  %43 = load i64, i64* %7, align 8
  %44 = load i64, i64* %10, align 8
  %45 = mul i64 4, %44
  %46 = add i64 %43, %45
  %47 = call i32 @copyout(i32* %42, i64 %46, i32 4)
  store i32 %47, i32* %8, align 4
  %48 = load i32, i32* %8, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %52

50:                                               ; preds = %41
  %51 = load i32, i32* %8, align 4
  store i32 %51, i32* %4, align 4
  br label %64

52:                                               ; preds = %41
  br label %53

53:                                               ; preds = %52, %37
  %54 = load i64, i64* %10, align 8
  %55 = add i64 %54, 1
  store i64 %55, i64* %10, align 8
  br label %56

56:                                               ; preds = %53, %27
  br label %57

57:                                               ; preds = %56
  %58 = load i64, i64* %9, align 8
  %59 = add i64 %58, 1
  store i64 %59, i64* %9, align 8
  br label %21

60:                                               ; preds = %21
  br label %61

61:                                               ; preds = %60, %3
  %62 = load i64, i64* %10, align 8
  %63 = load i64*, i64** %6, align 8
  store i64 %62, i64* %63, align 8
  store i32 0, i32* %4, align 4
  br label %64

64:                                               ; preds = %61, %50
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

declare dso_local i32 @ifnet_lock_assert(%struct.ifnet*, i32) #1

declare dso_local i32 @uuid_is_null(i32) #1

declare dso_local i32 @copyout(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
